Minor improvements/fixes (Toc & WRAP)

--- a/css/mixture.less
+++ b/css/mixture.less
@@ -46,6 +46,7 @@ table {
 
 #dw__toc {
 	width: @ini_toc_width;
+  background-color: @ini_background_neu;
 }
 
 [dir=ltr] #dw__toc {
